RESOLVED FIXED265361
[JSC] Make CodeBlock destruction lazy
https://bugs.webkit.org/show_bug.cgi?id=265361
Summary [JSC] Make CodeBlock destruction lazy
Yusuke Suzuki
Reported 2023-11-26 22:03:40 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2023-11-26 22:03:52 PST
Yusuke Suzuki
Comment 2 2023-11-26 22:06:02 PST
EWS
Comment 3 2023-11-27 18:18:00 PST
Committed 271184@main (bebb1488bc66): <https://commits.webkit.org/271184@main> Reviewed commits have been landed. Closing PR #20915 and removing active labels.
Fujii Hironori
Comment 4 2023-11-28 00:34:34 PST
Windows port regressed. Bug 265435 – REGRESSION(271184@main): [Win] crash under JSC::PolymorphicCallNode::unlinkImpl
Note You need to log in before you can comment on or make changes to this bug.